[project]
name = "cannanas-mcp-server"
version = "0.1.0"
description = "Cannanas MCP server for searching and calling the Cannanas API over MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.28.0",
  "PyYAML>=6.0.0",
]

[project.scripts]
cannanas-mcp = "cannanas_mcp.server:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
